fixed cart button on mobile devices and removed search icon from mobile device

--- a/assets/base.css
+++ b/assets/base.css
@@ -2394,6 +2394,15 @@ input[type="checkbox"] {
   margin-right: -1.2rem;
 }
 
+@media screen and (max-width: 750px) {
+  .header__icon--cart {
+    margin-right: 0.8rem;
+  }
+  .header__search {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 989px) {
   menu-drawer ~ .header__icons .header__icon--account {
     display: none;
